docs/apache-airflow-providers-cncf-kubernetes/3.0.1/_sources/_api/airflow/providers/cncf/kubernetes/operators/kubernetes_pod/index.rst.txt
:py:mod:`airflow.providers.cncf.kubernetes.operators.kubernetes_pod`
====================================================================

.. py:module:: airflow.providers.cncf.kubernetes.operators.kubernetes_pod

.. autoapi-nested-parse::

   Executes task in a Kubernetes POD



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.cncf.kubernetes.operators.kubernetes_pod.KubernetesPodOperator




.. py:exception:: PodReattachFailure

   Bases: :py:obj:`airflow.exceptions.AirflowException`

   When we expect to be able to find a pod but cannot.


.. py:class:: KubernetesPodOperator(*, namespace: Optional[str] = None, image: Optional[str] = None, name: Optional[str] = None, random_name_suffix: Optional[bool] = True, cmds: Optional[List[str]] = None, arguments: Optional[List[str]] = None, ports: Optional[List[kubernetes.client.models.V1ContainerPort]] = None, volume_mounts: Optional[List[kubernetes.client.models.V1VolumeMount]] = None, volumes: Optional[List[kubernetes.client.models.V1Volume]] = None, env_vars: Optional[List[kubernetes.client.models.V1EnvVar]] = None, env_from: Optional[List[kubernetes.client.models.V1EnvFromSource]] = None, secrets: Optional[List[airflow.kubernetes.secret.Secret]] = None, in_cluster: Optional[bool] = None, cluster_context: Optional[str] = None, labels: Optional[Dict] = None, reattach_on_restart: bool = True, startup_timeout_seconds: int = 120, get_logs: bool = True, image_pull_policy: Optional[str] = None, annotations: Optional[Dict] = None, resources: Optional[kubernetes.client.models.V1ResourceRequirements] = None, affinity: Optional[kubernetes.client.models.V1Affinity] = None, config_file: Optional[str] = None, node_selectors: Optional[dict] = None, node_selector: Optional[dict] = None, image_pull_secrets: Optional[List[kubernetes.client.models.V1LocalObjectReference]] = None, service_account_name: Optional[str] = None, is_delete_operator_pod: bool = True, hostnetwork: bool = False, tolerations: Optional[List[kubernetes.client.models.V1Toleration]] = None, security_context: Optional[Dict] = None, dnspolicy: Optional[str] = None, schedulername: Optional[str] = None, full_pod_spec: Optional[kubernetes.client.models.V1Pod] = None, init_containers: Optional[List[kubernetes.client.models.V1Container]] = None, log_events_on_failure: bool = False, do_xcom_push: bool = False, pod_template_file: Optional[str] = None, priority_class_name: Optional[str] = None, pod_runtime_info_envs: List[airflow.providers.cncf.kubernetes.backcompat.pod_runtime_info_env.PodRuntimeInfoEnv] = None, termination_grace_period: Optional[int] = None, configmaps: Optional[List[str]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Execute a task in a Kubernetes Pod

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:KubernetesPodOperator`

   .. note::
       If you use `Google Kubernetes Engine <https://cloud.google.com/kubernetes-engine/>`__
       and Airflow is not running in the same cluster, consider using
       :class:`~airflow.providers.google.cloud.operators.kubernetes_engine.GKEStartPodOperator`, which
       simplifies the authorization process.

   :param namespace: the namespace to run within kubernetes.
   :type namespace: str
   :param image: Docker image you wish to launch. Defaults to hub.docker.com,
       but fully qualified URLS will point to custom repositories. (templated)
   :type image: str
   :param name: name of the pod in which the task will run, will be used (plus a random
       suffix if random_name_suffix is True) to generate a pod id (DNS-1123 subdomain,
       containing only [a-z0-9.-]).
   :type name: str
   :param random_name_suffix: if True, will generate a random suffix.
   :type random_name_suffix: bool
   :param cmds: entrypoint of the container. (templated)
       The docker images's entrypoint is used if this is not provided.
   :type cmds: list[str]
   :param arguments: arguments of the entrypoint. (templated)
       The docker image's CMD is used if this is not provided.
   :type arguments: list[str]
   :param ports: ports for launched pod.
   :type ports: list[k8s.V1ContainerPort]
   :param volume_mounts: volumeMounts for launched pod.
   :type volume_mounts: list[k8s.V1VolumeMount]
   :param volumes: volumes for launched pod. Includes ConfigMaps and PersistentVolumes.
   :type volumes: list[k8s.V1Volume]
   :param env_vars: Environment variables initialized in the container. (templated)
   :type env_vars: list[k8s.V1EnvVar]
   :param secrets: Kubernetes secrets to inject in the container.
       They can be exposed as environment vars or files in a volume.
   :type secrets: list[airflow.kubernetes.secret.Secret]
   :param in_cluster: run kubernetes client with in_cluster configuration.
   :type in_cluster: bool
   :param cluster_context: context that points to kubernetes cluster.
       Ignored when in_cluster is True. If None, current-context is used.
   :type cluster_context: str
   :param reattach_on_restart: if the scheduler dies while the pod is running, reattach and monitor
   :type reattach_on_restart: bool
   :param labels: labels to apply to the Pod. (templated)
   :type labels: dict
   :param startup_timeout_seconds: timeout in seconds to startup the pod.
   :type startup_timeout_seconds: int
   :param get_logs: get the stdout of the container as logs of the tasks.
   :type get_logs: bool
   :param image_pull_policy: Specify a policy to cache or always pull an image.
   :type image_pull_policy: str
   :param annotations: non-identifying metadata you can attach to the Pod.
       Can be a large range of data, and can include characters
       that are not permitted by labels.
   :type annotations: dict
   :param resources: A dict containing resources requests and limits.
       Possible keys are request_memory, request_cpu, limit_memory, limit_cpu,
       and limit_gpu, which will be used to generate airflow.kubernetes.pod.Resources.
       See also kubernetes.io/docs/concepts/configuration/manage-compute-resources-container
   :type resources: k8s.V1ResourceRequirements
   :param affinity: A dict containing a group of affinity scheduling rules.
   :type affinity: k8s.V1Affinity
   :param config_file: The path to the Kubernetes config file. (templated)
       If not specified, default value is ``~/.kube/config``
   :type config_file: str
   :param node_selector: A dict containing a group of scheduling rules.
   :type node_selector: dict
   :param image_pull_secrets: Any image pull secrets to be given to the pod.
       If more than one secret is required, provide a
       comma separated list: secret_a,secret_b
   :type image_pull_secrets: List[k8s.V1LocalObjectReference]
   :param service_account_name: Name of the service account
   :type service_account_name: str
   :param is_delete_operator_pod: What to do when the pod reaches its final
       state, or the execution is interrupted. If True (default), delete the
       pod; if False, leave the pod.
   :type is_delete_operator_pod: bool
   :param hostnetwork: If True enable host networking on the pod.
   :type hostnetwork: bool
   :param tolerations: A list of kubernetes tolerations.
   :type tolerations: List[k8s.V1Toleration]
   :param security_context: security options the pod should run with (PodSecurityContext).
   :type security_context: dict
   :param dnspolicy: dnspolicy for the pod.
   :type dnspolicy: str
   :param schedulername: Specify a schedulername for the pod
   :type schedulername: str
   :param full_pod_spec: The complete podSpec
   :type full_pod_spec: kubernetes.client.models.V1Pod
   :param init_containers: init container for the launched Pod
   :type init_containers: list[kubernetes.client.models.V1Container]
   :param log_events_on_failure: Log the pod's events if a failure occurs
   :type log_events_on_failure: bool
   :param do_xcom_push: If True, the content of the file
       /airflow/xcom/return.json in the container will also be pushed to an
       XCom when the container completes.
   :type do_xcom_push: bool
   :param pod_template_file: path to pod template file (templated)
   :type pod_template_file: str
   :param priority_class_name: priority class name for the launched Pod
   :type priority_class_name: str
   :param termination_grace_period: Termination grace period if task killed in UI,
       defaults to kubernetes default
   :type termination_grace_period: int


   .. py:attribute:: BASE_CONTAINER_NAME
      :annotation: = base

      

   .. py:attribute:: POD_CHECKED_KEY
      :annotation: = already_checked

      

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['image', 'cmds', 'arguments', 'env_vars', 'labels', 'config_file', 'pod_template_file', 'namespace']

      

   .. py:method:: pod_manager(self) -> airflow.providers.cncf.kubernetes.utils.pod_manager.PodManager


   .. py:method:: client(self) -> kubernetes.client.CoreV1Api


   .. py:method:: find_pod(self, namespace, context) -> Optional[kubernetes.client.models.V1Pod]

      Returns an already-running pod for this task instance if one exists.


   .. py:method:: get_or_create_pod(self, pod_request_obj: kubernetes.client.models.V1Pod, context)


   .. py:method:: await_pod_start(self, pod)


   .. py:method:: extract_xcom(self, pod)

      Retrieves xcom value and kills xcom sidecar container


   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.


   .. py:method:: cleanup(self, pod: kubernetes.client.models.V1Pod, remote_pod: kubernetes.client.models.V1Pod)


   .. py:method:: process_pod_deletion(self, pod)


   .. py:method:: patch_already_checked(self, pod: kubernetes.client.models.V1Pod)

      Add an "already checked" annotation to ensure we don't reattach on retries


   .. py:method:: on_kill(self) -> None

      Override this method to cleanup subprocesses when a task instance
      gets killed. Any use of the threading, subprocess or multiprocessing
      module within an operator needs to be cleaned up or it will leave
      ghost processes behind.


   .. py:method:: build_pod_request_obj(self, context=None)

      Returns V1Pod object based on pod template file, full pod spec, and other operator parameters.

      The V1Pod attributes are derived (in order of precedence) from operator params, full pod spec, pod
      template file.


   .. py:method:: dry_run(self) -> None

      Prints out the pod definition that would be created by this operator.
      Does not include labels specific to the task instance (since there isn't
      one in a dry_run) and excludes all empty elements.



